# robot_arm_control_UI_HKA

./: .gitignore
gripper_control/: CMakeLists.txt  package.xml
gripper_control/src/: basic_service.cpp  gripper_service_server.cpp
joint_pdo_sender/: setup.py
joint_pdo_sender/joint_pdo_sender/: joint_state_to_pdo.py  sdo_joint_writer.py
robot_control/: CMakeLists.txt  package.xml
robot_control/src/: forward_kinematic.cpp  ik_demo.cpp  ik_demo_wrist.cpp  joint_listener.cpp  joint_position_receiver.cpp  json_trajectory_executor.cpp  move_X_Z.cpp  move_home.cpp  move_to_pose copy.cpp  move_to_pose.cpp  multiple_positions.cpp  multiple_positions_feedback.cpp  robot_arm_execution.cpp  send_all_joints copy.cpp  send_all_joints.cpp
robot_moveit_config/: CMakeLists.txt
robot_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml
robot_moveit_config/launch/: robot_UI.launch.py  robot_simulation.launch.py
rviz2_teach_plugin/: CMakeLists.txt  package.xml  rviz_plugin_description.xml
rviz2_teach_plugin/include/rviz2_teach_plugin/: teach_plugin.hpp
rviz2_teach_plugin/src/: teach_plugin.cpp
rviz_services/: CMakeLists.txt  package.xml
rviz_services/src/: get_pose_server.cpp  move_linear_service.cpp
rviz_services/srv/: GetPoseRobotArm.srv  MoveLinear.srv  MoveToPose.srv
