<?xml version="1.0"?>
<package format="3">
  <name>gripper_control</name>
  <version>0.0.0</version>
  <description>Gripper control service server</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>
  <depend>moveit_ros_planning_interface</depend>


  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
